[package]
name = "instance"
version = "0.1.0"
edition = "2021"

[dependencies]
balius-runtime = { git = "https://github.com/gonzalezzfelipe/balius.git", branch="feat/support-object-urls" }
config = { version = "0.15.9", default-features = false, features = ["toml", "json"] }
futures-util = "0.3.30"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["runtime", "client", "derive"] }
lazy_static = "1.4.0"
miette = "7.5.0"
object_store = { version = "0.12.0", features = ["fs", "aws"] }
operator = { path = "../operator/" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.4"
