[package]
name = "instance"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
aws-config = "1.6.0"
aws-sdk-s3 = "1.79.0"
balius-runtime = { git = "https://github.com/gonzalezzfelipe/balius.git", rev = "5046d00c03129d913a8473d0db032a92b5a20238", features = ["http", "aws"] }
# balius-runtime = { git = "https://github.com/txpipe/balius.git", features = ["http", "aws"] }
# balius-runtime = { path = "../../balius/balius-runtime", features = ["http", "aws"] }
base64 = "0.22.1"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
config = { version = "0.15.9", default-features = false, features = ["toml", "json"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
hex = "0.4.3"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube-leader-election = "0.41.0"
lazy_static = "1.4.0"
miette = { version = "7.6.0", features = ["fancy"] }
object_store = { version = "0.12.0", features = ["fs", "aws"] }
opentelemetry = { version = "0.29.1", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["metrics", "trace", "rt-tokio"] }
opentelemetry-prometheus = "0.29.1"
operator = { path = "../operator/" }
prometheus = "0.14.0"
prost = "0.13"
reqwest = "0.12.22"
rustls = "0.23.25"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
tokio-util = "0.7.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.4"
vaultrs = { git = "https://github.com/jmgilman/vaultrs", rev = "45833fe9c92051b6d61b1f6bf9b8ca76919759a4" }
warp = { version = "0.3.7" }
